--- a/index.cshtml
+++ b/index.cshtml
@@ -1,8 +1,8 @@
-
-<!DOCTYPE html>
-
-<link rel="stylesheet" href="site.css">
-
+@page
+@model IndexModel
+@{
+    ViewData["Title"] = "Home page";
+}
 <div><p><br></p></div>
 
 <div class="parallax" style="background-image: url('../images/slideshow/picture1.jpg');"></div>
@@ -29,11 +29,11 @@
     <div class="column-two">
         <div class="center">
             <h3 class="orange">Texas Defeats Texas A&M to Win National Championship</h3>
-            <img src=".../images/nationals-article.jpg" class="two-column-images" />
+            <img src="~/images/nationals-article.jpg" class="two-column-images" />
         </div>
         <p class="column-text">
-            San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men's
-            Division I title on Saturday night, while Texas A claimed the Women's Division I
+            San Diego State captured the NCVF Collegiate Club Volleyball Championship in Men’s
+            Division I title on Saturday night, while Texas A claimed the Women’s Division I
             title in St. Louis, Missouri, on the final day of the competition. A total of
             456 teams competed in the three-day event, which is divided into divisions based
             on enrollment... <a href="https://www.teamusa.org/USA-Volleyball/Features/2018/April/14/San-Diego-State-Texas-Win-Top-NCVF-Crowns">Read More</a>
